generate div for every word, to fix mid word char wrap

--- a/style.css
+++ b/style.css
@@ -3,20 +3,21 @@
 }
 
 body, html {
-    height: 100%;
     margin: 0;
-    display: flex;
+    background: #323437;
+    font-family: "Roboto Mono", "Vazirmatn", monospace;
+    font-size: 30px;
+
+    height: 100%;
+    width: 100%;
     justify-content: center;
     align-items: center;
-    background: #323437;
-    font-size: 30px;
-    font-family: "Roboto Mono", "Vazirmatn", monospace;
 }
 
 #contain {
-    display: flex;
-    flex-direction: column;
     width: 60%;
+    padding-left: 20%;
+    padding-top: 20%;
 }
 
 #timer {
@@ -29,14 +30,28 @@ body, html {
     outline: none;
     border: none;
     box-shadow: none;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#word {
+    display: flex;
+    flex-direction: row;
+    padding-right: 10px;
+}
+
+#character {
+    display: flex;
+    flex-direction: row;
 }
 
 @keyframes flashBackground {
     0%, 100% { 
-        opacity: 1; /* Full opacity */
+        opacity: 1;
     }
     50% { 
-        opacity: 0.25; /* 25% opacity */
+        opacity: 0.25;
     }
 }
 
